package com.amazon.ata.types;

import java.math.BigDecimal;
import java.util.Objects;

public class Box extends Packaging{
     private BigDecimal mass;
     BigDecimal length;
     BigDecimal width;
     BigDecimal height;

    /**
     * Instantiates a new Packaging object.
     *
     * @param material - the Material of the package
     * @param length   - the length of the package
     * @param width    - the width of the package
     * @param height   - the height of the package
     */
    public Box(Material material, BigDecimal length, BigDecimal width, BigDecimal height) {
        super(material);
        this.length = length;
        this.width = width;
        this.height = height;
    }

    @Override
    public boolean canFitItem(Item item) {
        return this.length.compareTo(item.getLength()) > 0 &&
                this.width.compareTo(item.getWidth()) > 0 &&
                this.height.compareTo(item.getHeight()) > 0;

    }

    @Override
    public BigDecimal getMass() {
        BigDecimal endsArea = length.multiply(width).multiply(BigDecimal.valueOf(2));
        BigDecimal shortSidesArea = length.multiply(height).multiply(BigDecimal.valueOf(2)) ;
        BigDecimal longSidesArea = width.multiply(height).multiply(BigDecimal.valueOf(2)) ;
        mass = endsArea.add(shortSidesArea).add(longSidesArea) ;
        return mass;

    }

    @Override
    public boolean equals(Object o) {
        if (this == o) return true;
        if (o == null) {
//            System.out.println(this.getClass());
//            System.out.println(o.getClass());
            return false;
        }
        if (getClass() != o.getClass()) {
            return false;
        }
        Box box = (Box) o;
        return length.equals(box.length) && width.equals(box.width) && height.equals(box.height);

    }


    @Override
    public int hashCode() {
    return Objects.hash(super.hashCode(),length,width,height);
    }
}
